more responsive styling for community selector, fix homepage alignment

--- a/client/styles/components/sidebar/community_selector.scss
+++ b/client/styles/components/sidebar/community_selector.scss
@@ -1,5 +1,14 @@
 @import 'client/styles/shared';
 
+.CommunityLabel {
+    .visible-sm {
+        display: none;
+        @include sm-max {
+            display: block;
+        }
+    }
+}
+
 .CommunitySelector {
     button.cui-button {
         border: none !important;
