--- a/client/styles/pages/home/community_cards.scss
+++ b/client/styles/pages/home/community_cards.scss
@@ -14,6 +14,15 @@
         font-size: 16px;
         color: #999;
     }
+    .communities-list,
+    .other-list {
+        width: calc(100% + 40px);
+        margin-right: -40px;
+        @include sm-max {
+            width: initial;
+            margin-right: 0;
+        }
+    }
     .other-list {
         .home-card {
             text-align: center;
